[package]
name = "pokarm-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
teloxide = { version = "0.15.0", features = ["full"] }
tokio = { version = "1.44.2", features = ["macros"] }
